Fix strange gap with firefox

--- a/src/views/Joseki/Joseki.styl
+++ b/src/views/Joseki/Joseki.styl
@@ -64,6 +64,7 @@
 
         @media screen and (max-width: 801px) {
             height: 100vw;
+            max-height: 100vw;  // firefox needs this
             flex-basis: 99%;
         }
     }
